--- a/APK/android/build.gradle
+++ b/APK/android/build.gradle
@@ -4,6 +4,19 @@ allprojects {
         mavenCentral()
     }
 }
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = "11"
+    targetCompatibility = "11"
+}
+buildscript {
+    ext {
+        compileSdkVersion = 34
+        targetSdkVersion = 34
+        minSdkVersion = 21
+        kotlin_version = '1.9.0'
+    }
+}
 
 rootProject.buildDir = "../build"
 subprojects {
